feat(eslint.js): add rules enforcing best practices and consistency using tailwind-css

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     },
     "dependencies": {
         "eslint-config-prettier": "^8.8.0",
+        "eslint-plugin-tailwindcss": "^3.12.1",
         "shipit": "^1.2.0",
         "stylelint-config-idiomatic-order": "^9.0.0",
         "stylelint-config-prettier": "^9.0.5",
