--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "registry": "https://registry.npmjs.org/"
     },
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "clean": "rm -rf node_modules && yarn install"
     },
     "repository": {
         "type": "git",
@@ -31,7 +32,6 @@
     },
     "dependencies": {
         "eslint-config-prettier": "^8.8.0",
-        "eslint-plugin-tailwindcss": "^3.12.1",
         "shipit": "^1.2.0",
         "stylelint-config-idiomatic-order": "^9.0.0",
         "stylelint-config-prettier": "^9.0.5",
@@ -49,7 +49,6 @@
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-native": "^4.0.0",
         "prettier": "^2.7.1",
-        "prettier-plugin-tailwindcss": "^0.2.1",
         "stylelint": "^14.14.1",
         "stylelint-prettier": "^2.0.0",
         "typescript": "^4.8.4"
