--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
         "eslint-plugin-react": "^7.33.2",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-native": "^4.1.0",
+        "eslint-plugin-simple-import-sort": "^10.0.0",
         "jest": "^29.7.0",
         "node-env-run": "^4.0.2",
         "prettier": "^3.0.3",
