--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,10 +7,10 @@
     "editor.formatOnPaste": true,
     "emmet.showExpandedAbbreviation": "never",
     "editor.codeActionsOnSave": {
-        "source.fixAll.esbenp.prettier-vscode": true,
-        "source.fixAll.eslint": true,
-        "source.fixAll.stylelint": true,
-        "javascript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBraces": true,
-        "typescript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBraces": true
+        "source.fixAll.esbenp.prettier-vscode": "explicit",
+        "source.fixAll.eslint": "explicit",
+        "source.fixAll.stylelint": "explicit",
+        "javascript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBraces": "explicit",
+        "typescript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBraces": "explicit"
     }
 }
